[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-polish-data"
version = "0.1.0"
description = "MCP Server for Polish public data: KRS, CEIDG, GUS BDL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "OpenClaw", email = "stronybiznesupl@gmail.com" },
]
keywords = ["mcp", "model-context-protocol", "poland", "krs", "ceidg", "gus", "claude", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-polish-data = "mcp_polish_data.server:main"

[project.urls]
Homepage = "https://github.com/localfy/mcp-polish-data"
Issues = "https://github.com/localfy/mcp-polish-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_polish_data"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live API tests requiring internet access",
]
